--- a/pages/events.module.css
+++ b/pages/events.module.css
@@ -4,6 +4,12 @@
 .sticky-button-mobile-container{
   display: none;
 }
+.brand_img{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+}
 /* header design start */
 .event_page header {
   position: fixed;
@@ -284,9 +290,15 @@
 .order_events .events_list > li {
   display: flex;
   flex-direction: column;
-  border-bottom: 1px solid #deddd9;
   padding: 20px 0;
 }
+.order_events .events_list > li:not(:last-child) {
+  border-bottom: 1px solid #deddd9;
+}
+.order_events .events_list > li:last-child {
+  padding-bottom: 0;
+}
+
 .events_list li.events_list_item .event_time {
   color: #212120;
   font-size: 16px;
@@ -311,6 +323,9 @@
   font-style: normal;
   line-height: 25px;
 }
+.events_list li.events_list_item .event_img {
+  margin-top: 10px;
+}
 .order_events .event_user_card {
   background-color: #fff;
   border-radius: 2px;
@@ -320,7 +335,6 @@
 .event_user_card .user_card_header {
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
 }
 
 .user_card_header .user_about {
@@ -334,6 +348,14 @@
   color: #212120;
   font-size: 14px;
   font-weight: 500;
+  font-family: "Fira Sans";
+  font-style: normal;
+  line-height: 22px;
+}
+.user_card_header .user_about .user_desc {
+  color: #212120;
+  font-size: 14px;
+  font-weight: 300;
   font-family: "Fira Sans";
   font-style: normal;
   line-height: 22px;
@@ -387,11 +409,11 @@
 }
 .order_events .event_card-list .user-designation {
   color: #212120;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 300;
   font-family: "Fira Sans";
   font-style: normal;
-  line-height: 20px;
+  line-height: 22px;
 }
 
 /* event details design ends */
@@ -432,21 +454,35 @@
 .event_page footer {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   background-color: #fff;
-  padding-bottom: 104px;
+  padding-bottom: 70px;
+  
 }
-.event_page footer .powered_by {
-  color: #292928;
+.event_page footer a {
+  margin-bottom: 15px;
   font-size: 14px;
-  font-weight: 300;
-  font-family: "Fira Sans";
   font-style: normal;
+  font-weight: 300;
   line-height: 22px;
+  color: #212120;
+  font-family: "Fira Sans";
 }
-.event_page footer .powered_by .fin_logo {
+.event_page footer >a img {
   margin-left: 10px;
 }
+.event_page .footer_bottom{
+  display: flex;
+}
+.event_page .footer_bottom > a{
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+.event_page .footer_bottom > a:first-child{
+  margin-right: 30px;
+  }
 
 /* footer design ends */
 
@@ -488,6 +524,7 @@
   }
   .hero_banner {
     padding: 20px 25px 40px;
+    margin-bottom: 61px;
   }
   .hero_banner .event_page_logo {
     display: block;
@@ -578,7 +615,7 @@
   .about_event {
     padding-left: 25px;
     padding-right: 25px;
-    margin-bottom: 60px;
+    margin-bottom: 50px;
   }
   .about_event .about_event_title {
     font-size: 20px;
@@ -613,12 +650,20 @@
     font-size: 16px;
     line-height: 25px;
   }
+  .user_card_header .user_about .user_desc {
+    font-size: 12px;
+    line-height: 20px;
+  }
   .event_details .event_details_card {
     background: url("/images/event-page/westin-bg-mob.png");
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     height: 246px;
+  }
+  .events_list li.events_list_item .event_img {
+    width: 100%;
+    height: 100%;
   }
   .order_events .order_events_title {
     font-size: 20px;
@@ -652,7 +697,7 @@
     margin-bottom: 20px;
   }
   .event_page footer {
-    padding-bottom: 43px;
+    padding-bottom: 100px;
   }
   .event_details_list {
     padding-left: 41px;
@@ -676,6 +721,10 @@
     height: 15px;
   }
   .event_details_item .event_details_value {
+    font-size: 12px;
+    line-height: 20px;
+  }
+  .order_events .event_card-list .user-designation {
     font-size: 12px;
     line-height: 20px;
   }
